--- a/论文/wps-addon-build/ui/taskpane.html
+++ b/论文/wps-addon-build/ui/taskpane.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-    <pre>---更新于 2022.10.6 Beta版本</pre>
+    <pre>---更新于 2022.10.13 Beta</pre>
     <p>
         <b>参考链接</b>
         <li onclick="shellExecuteByOAAssist(apa)">APA格式</li>
