新增核对索引功能

--- a/论文/wps-addon-build/ui/taskpane.html
+++ b/论文/wps-addon-build/ui/taskpane.html
@@ -20,7 +20,9 @@
 </head>
 
 <body>
-    <pre>---更新于 2022.10.13 Beta</pre>
+    <pre>---更新于 2022.10.18 Beta <br>
+    核对索引基本功能已全部完善，就是用法。。。额 <br>
+    请务必阅读本文档</pre>
     <p>
         <b>参考链接</b>
         <li onclick="shellExecuteByOAAssist(apa)">APA格式</li>
